--- a/ftp-server/data/users.yml
+++ b/ftp-server/data/users.yml
@@ -1,3 +1,6 @@
+- ip_addr: 192.168.0.1
+  password: 183cc8e5a380667ed00408f1a9e7fe8790022a129c9a869f2003f04e
+  username: koshkas
 - ip_addr: 127.0.0.1
-  password: 68cb29c3d87d4293d40505b43bb04d0c35334e16e7dcab4883fa9f39
-  username: example
+  password: e49149c16a3db442cf25015ee016769c0cdacf5b1c950bb4b550396c
+  username: user2
